@@ -12,12 +12,6 @@ CDebugTarget.Unable_to_get_globals_1=Unable to get globals. Reason:
 CArrayPartition.0=Type is not available.
 CArrayPartition.1=Qualified name is not available.
 CDebugTarget.1=Execution is suspended because of error.
-CDebugTarget.2=Terminate failed.
-CDebugTarget.3=Resume failed.
-CDebugTarget.4=Suspend failed.
-CDebugTarget.5=Disconnect failed.
-CDebugTarget.6=Restart failed.
-CDebugTarget.7=Resume without signal failed.
 CModificationVariable.0=Unable to set value.
 CModificationVariable.1=Unable to set value.
 CStackFrame.0={0} at {1}: {2}
